--- a/index.html
+++ b/index.html
@@ -23,47 +23,55 @@
           <div class="header__square-pic"></div>
   </div>
     </header>
-    <main class="content">
+    <main class="content page">
       <section class="description">
-        <p class="two-columns">
-          <a class="two-columns__brief" >Главные проблемы в обучении</a>
-        
-          <p class="two-coumns__main-text">
-          <p class="two-columns__paragraph paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-          <span class="two-columns__span-accent">Вывод:</span>      
-            
-          <p class="two-columns_paragraph paragraph"> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-          <p class="two-columns_paragraph paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-          </p>
-        </p>
+        <div class="two-columns">
+          <div class="two-columns__brief">Главные проблемы в обучении</div>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся         к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать           тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и         не приносит пользы.
+            </div>
+            <div class="two-columns__span-accent two-columns__paragraph">
+              <b class="span">Вывод:</b>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим                  делать?
+            </div>
+            <div class='two-columns__finale two-columns__paragraph'>
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его                 эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </div>
+          </div>
+        </div>
+        </div>
       </section>
 
-      <section class="digits">
-        <p class="section-title">Цифры и факты</p>
-        <p class="section-subtitle">Про учёбу и мозг</p>
+      <div class="digits">
+        <div class="table__m">
+        <div class="section-title">Цифры и факты</div>
+        <div class="section-subtitle">Про учёбу и мозг</div>
         <div class="table">
         <div class="table__cell">
         <p class="table__heading">86 миллиардов</p>
-        <p class="table__text">Число нейронов в мозге человека</p>
-        <p class="table__heading">2,1 миллиарда</p>
-        <p class="table__text">Число нуждающихся в повышении квалификации<br Всемирный Банк, 2018></p>
-        <p class="table__heading">1000 терабайт</p>
-        <p class="table__text">объём памяти человека</p>
-        <p class="table__heading">500 триллионов</p>
-        <p class="table__text">Число ответственных за обучение нервных синапсисов у взрослого человека</p>
-        <p class="table__heading">420 миллионов</p>
-        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства <br Всемирный банк, 2017></p>
-        <p class="table__heading">17-20 лет</p>
-        <p class="table__text">Пик обучаемости</p>
-        <p class="table__heading">1885 год</p>
-        <p class="table__text">Открытие кривой забывания</p>
-        <p class="table__heading">1889 год</p>
-        <p class="table__text">Открытие условного рефлекса</p>
+        <p class="table__text">Число нейронов в мозге человека</p></div>
+        <div class="table__cell "><p class="table__heading">2,1 миллиарда</p>
+        <p class="table__text">Число нуждающихся в повышении квалификации <p class="table__text">Всемирный Банк, 2017</p></p></div>
+        <div class="table__cell"><p class="table__heading">1000 терабайт</p>
+        <p class="table__text">объём памяти человека</p></div>
+        <div class="table__cell"><p class="table__heading">500 триллионов</p>
+        <p class="table__text">Число ответственных за обучение нервных синапсисов у взрослого человека</p></div>
+        <div class="table__cell"><p class="table__heading">420 миллионов</p>
+        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства  <p class="table__text"> Всемирный банк, 2017</p></p></div>
+        <div class="table__cell"><p class="table__heading">17-20 лет</p>
+        <p class="table__text">Пик обучаемости</p></div>
+        <div class="table__cell"><p class="table__heading">1885 год</p>
+        <p class="table__text">Открытие кривой забывания</p></div>
+        <div class="table__cell"><p class="table__heading">1889 год</p>
+        <p class="table__text">Открытие условного рефлекса</p></div>
         </div>
         </div>
       </section>
 
-      <section class="feinman">
+      <section class="feinman" alt="Фейман">
+        <h1 class="feinman__title">Метод Фейнмана</h1>
+        <h3 class="feinman__subtitle">Выучить и не забыть.</h3>
+        <a class="feinman__link" href="#">Подробнее&rarr;</a>
       </section>
 
       <section class="kaufman">
