--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </section>
 
-      <section class="feinman" alt="Фейман">
+      <section class="feinman">
         <h1 class="feinman__title">Метод Фейнмана</h1>
         <h3 class="feinman__subtitle">Выучить и не забыть.</h3>
         <a class="feinman__link" href="#">Подробнее&rarr;</a>
