--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
   <title>Научиться учиться</title>
 </head>
 <body >
-  <div class="page">
+  <section class="page">
      <header class="header">
       <div class="logo logo__place__header"></div>
       <h1 class="header__title">Научиться учиться</h1>
@@ -39,7 +39,7 @@
         <p class="table__heading">86 миллиардов</p>
         <p class="table__text">Число нейронов в мозге человека</p></div>
         <div class="table__cell "><p class="table__heading">2,1 миллиарда</p>
-        <p class="table__text">Число нуждающихся в повышении квалификации <p class="table__text">Всемирный Банк, 2017</p></p></div>
+        <p class="table__text">Число нуждающихся в повышении квалификации<p class="table__text">Всемирный Банк, 2017</p></p></div>
         <div class="table__cell"><p class="table__heading">1000 терабайт</p>
         <p class="table__text">объём памяти человека</p></div>
         <div class="table__cell"><p class="table__heading">500 триллионов</p>
@@ -109,7 +109,7 @@
               </div>
             
       </div>
+    </section>
     </footer>
-  </section>
 </body>
 </html>
