style & header fixed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name='description' content='Итоговое задание первого спринта'>
   <meta name="keywords" content="html, css">
   <meta name="author" content="Катя Иванова">
-  <link href="../how-to-learn/styles/normalize.css" rel="stylesheet" >
-  <link href="../how-to-learn/styles/style.css" rel="stylesheet" >
+  <link href="./styles/normalize.css" rel="stylesheet" >
+  <link href="./styles/style.css" rel="stylesheet" >
   <title>Научиться учиться</title>
 </head>
 <body >
