--- a/index.html
+++ b/index.html
@@ -13,100 +13,138 @@
 <body >
   <div class="page">
      <header class="header">
-      <div class="logo logo__place__header"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <h5 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link"> Узнать&rarr;</a> </h5>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link"> Узнать &rarr;</a> </p>
       <div class="header__main-illustration"></div>
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
         <div class="two-columns">
-        <div class="two-columns__brief">Главные проблемы в обучении</div>
+        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
-        <div class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
-        <div class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
-        <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>
+        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
         </div>
       </section>
 
       <section class="digits">
-        <div class="section-title">Цифры и факты</div>
-        <div class="section-subtitle">Про учёбу и мозг</div>
-        <div class="table">
-        <div class="table__cell">
-        <p class="table__heading">86 миллиардов</p>
-        <p class="table__text">Число нейронов в мозге человека</p></div>
-        <div class="table__cell "><p class="table__heading">2,1 миллиарда</p>
-        <p class="table__text">Число нуждающихся в повышении квалификации <p class="table__text">Всемирный Банк, 2017</p></p></div>
-        <div class="table__cell"><p class="table__heading">1000 терабайт</p>
-        <p class="table__text">объём памяти человека</p></div>
-        <div class="table__cell"><p class="table__heading">500 триллионов</p>
-        <p class="table__text">Число ответственных за обучение нервных синапсисов у взрослого человека</p></div>
-        <div class="table__cell"><p class="table__heading">420 миллионов</p>
-        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства  <p class="table__text"> Всемирный банк, 2017</p></p></div>
-        <div class="table__cell"><p class="table__heading">17-20 лет</p>
-        <p class="table__text">Пик обучаемости</p></div>
-        <div class="table__cell"><p class="table__heading">1885 год</p>
-        <p class="table__text">Открытие кривой забывания</p></div>
-        <div class="table__cell"><p class="table__heading">1889 год</p>
-        <p class="table__text">Открытие условного рефлекса</p></div>
-        </div>
+        <h3 class="section-title">Цифры и факты</h3>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
+        <li class="table_cell">
+        <h3 class="table_heading">86 миллиардов</h3>
+        <p class="table_text">Число нейронов в мозге человека</p></li>
+        <li class="table_cell ">
+        <h3 class="table_heading">2,1 миллиарда</h3>
+        <p class="table_text">Число нуждающихся в повышении квалификации</p>
+        <p class="table_text">Всемирный Банк, 2017</p>
+        </li>
+        <li class="table_cell">
+          <h3 class="table_heading">1000 терабайт</h3>
+        <p class="table_text">объём памяти человека</p>
+      </li>
+        <li class="table_cell">
+          <h3 class="table_heading">500 триллионов</h3>
+        <p class="table_text">Число ответственных за обучение нервных синапсисов у взрослого человека</p>
+      </li>
+        <li class="table_cell">
+          <h3 class="table_heading">420 миллионов</h3>
+        <p class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>  
+          <p class="table_text"> Всемирный банк, 2017</p>
+        </li>
+        <li class="table_cell">
+          <h3 class="table_heading">17-20 лет</h3>
+        <p class="table_text">Пик обучаемости</p>
+      </li>
+        <li class="table_cell">
+          <h3 class="table_heading">1885 год</h3>
+        <p class="table_text">Открытие кривой забывания</p>
+      </li>
+        <li class="table_cell">
+          <h3 class="table_heading">1889 год</h3>
+        <p class="table_text">Открытие условного рефлекса</p>
+      </li>
+        </ul>
       </section>
 
       <section class="feynman">
-        <h1 class="feyman__title">Метод Фейнмана</h1>
-        <h2 class="feyman__subtitle">Выучить и не забыть.</h2>
-        <a href="#" class="feyman__link">Подробнее&rarr;</a>
+        <h4 class="feynman_title">Метод Фейнмана</h4>
+        <p class="feynman_subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman_link">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
-        <div class="kaufman__triangle"></div>
-        <div class="section-title__theme__dark section-title">Принципы обучения</div>
-        <div class="section-subtitle__theme__dark section-subtitle">от Джоша Кауфмана</div>
-        <div class="table__theme__dark table">
-        <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">1</p>
-        <p class="table__text__theme__dark table__text">Выберите привлекательный проект.</p></div>
-        <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">2</p>
-          <p class="table__text__theme__dark table__text">Сосредоточьтесь на каком-то одном навыке.</p></div>
-          <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">3</p>
-            <p class="table__text__theme__dark table__text">Определите целевой уровень мастерства.</p></div>
-            <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">4</p>
-              <p class="table__text__theme__dark table__text">Разбейте навык на элементы.</p></div>
-              <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">5</p>
-                <p class="table__text__theme__dark table__text">Приготовьте всё необходимое для занятий.</p></div>
-                <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">6</p>
-                  <p class="table__text__theme__dark table__text">Устраните препятствия для занятий.</p></div>
-                  <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">7</p>
-                    <p class="table__text__theme__dark table__text">Выделите специальное время для занятий.</p></div>
-                    <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">8</p>
-                      <p class="table__text__theme__dark table__text">Создайте быстрые петли обратной связи.</p></div>
-                      <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">9</p>
-                        <p class="table__text__theme__dark table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p></div>
-                        <div class="table__cell__theme__dark table__cell"><p class="table__heading__theme__dark table__heading">10</p>
-                          <p class="table__text__theme__dark table__text">Уделяйте внимание количеству и скорости.</p></div>
-          </div>       
+        <div class="kaufman_triangle"></div>
+        <div class="section-title_theme_dark section-title">Принципы обучения</div>
+        <p class="section-subtitle_theme_dark section-subtitle">от Джоша Кауфмана</p>
+        <lu class="table_theme_dark table">
+        <li class="table_cell_theme_dark table_cell">
+          <p class="table_heading_theme_dark table_heading">1</p>
+        <p class="table_text_theme_dark table_text">Выберите привлекательный проект.</p>
+        </li>
+        <li class="table_cell_theme_dark table_cell">
+          <p class="table_heading_theme_dark table_heading">2</p>
+          <p class="table_text_theme_dark table_text">Сосредоточьтесь на каком-то одном навыке.</p>
+        </li>
+          <li class="table_cell_theme_dark table_cell">
+            <p class="table_heading_theme_dark table_heading">3</p>
+            <p class="table_text_theme_dark table_text">Определите целевой уровень мастерства.</p>
+          </li>
+            <li class="table_cell_theme_dark table_cell">
+              <p class="table_heading_theme_dark table_heading">4</p>
+              <p class="table_text_theme_dark table_text">Разбейте навык на элементы.</p>
+            </li>
+              <li class="table_cell_theme_dark table_cell">
+                <p class="table_heading_theme_dark table_heading">5</p>
+                <p class="table_text_theme_dark table_text">Приготовьте всё необходимое для занятий.</p>
+              </li>
+                <li class="table_cell_theme_dark table_cell">
+                  <p class="table_heading_theme_dark table_heading">6</p>
+                  <p class="table_text_theme_dark table_text">Устраните препятствия для занятий.</p>
+                </li>
+                  <li class="table_cell_theme_dark table_cell">
+                    <p class="table_heading_theme_dark table_heading">7</p>
+                    <p class="table_text_theme_dark table_text">Выделите специальное время для занятий.</p>
+                  </li>
+                    <li class="table_cell_theme_dark table_cell">
+                      <p class="table_heading_theme_dark table_heading">8</p>
+                      <p class="table_text_theme_dark table_text">Создайте быстрые петли обратной связи.</p>
+                    </li>
+                      <li class="table_cell_theme_dark table_cell">
+                        <p class="table_heading_theme_dark table_heading">9</p>
+                        <p class="table_text_theme_dark table_text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+                      </li>
+                        <li class="table_cell_theme_dark table_cell">
+                          <p class="table_heading_theme_dark table_heading">10</p>
+                          <p class="table_text_theme_dark table_text">Уделяйте внимание количеству и скорости.</p>
+                        </li>
+                      </ul>       
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__columns">
-          <div class="footer__column__content__copyright">
-          <div class="logo__palce__footer logo"></div>
-          <p class="footer__author"> &COPY; 2020. Екатерина Иванова</p>
+      <div class="footer_columns">
+          <div class="footer_column_content_copyright footer_column">
+          <div class="logo_place_footer logo"></div>
+          <p class="footer_author"> &COPY; 2020. Екатерина Иванова</p>
           </div>
-            <div class="footer__column__content__info">
-            <p class="footer__column-heading">О Практикуме</p>
-            <a href="#" class="footer__column-links">Главная</a>
-            <a href="#" class="footer__column-links">Концепция</a>
-            <a href="#" class="footer__column-links">Наставники</a>
-            </div>
-              <div class="footer__column__content__social">
-              <p class="footer__column-heading">Соцсети</p>
-              <a href="#" class="footer__column-links"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Фейсбука">Facebook </a>
-              <a href="#" class="footer__column-links"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка вконтакте"> ВКонтакте</a>
-              <a href="#" class="footer__column-links"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка инстаграм">Instagram </a>
-              </div>
+            <nav class="footer_column_content_info footer_column">
+            <ul class="footer_column-heading">О Практикуме
+            <li><a href="#" class="footer_column-links">Главная</a></li>
+            <li><a href="#" class="footer_column-links">Концепция</a></li>
+            <li><a href="#" class="footer_column-links">Наставники</a></li>
+            </ul>
+            </nav>
+              <nav class="footer_column_content_social footer_column">
+              <ul class="footer_column-heading">Соцсети
+              <li><a href="#" class="footer_column-links"><img class="footer_social-icon" src="./images/facebook_color_white.svg" alt="иконка Фейсбука">Facebook</a></li>
+              <li><a href="#" class="footer_column-links"><img class="footer_social-icon" src="./images/vk_color_white.svg" alt="иконка вконтакте">ВКонтакте</a></li>
+              <li><a href="#" class="footer_column-links"><img class="footer_social-icon" src="./images/instagram_color_white.svg" alt="иконка инстаграм">Instagram</a></li>
+              </ul>
+              </nav>
             
       </div>
     </footer>
