--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
      <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link"> Узнать &rarr;</a> </p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link"> Узнать &rarr;</a></p>
       <div class="header__main-illustration"></div>
       <div class="header__square-pic"></div>
     </header>
@@ -24,9 +25,13 @@
         <div class="two-columns">
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
-        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
+          Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+           Зубрежка быстро выветривается и не приносит пользы.</p>
+        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. 
+          Что с этим делать?</p>
+        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. 
+          Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
         </div>
       </section>
@@ -82,7 +87,7 @@
         <div class="section-title_theme_dark section-title">Принципы обучения</div>
         <p class="section-subtitle_theme_dark section-subtitle">от Джоша Кауфмана</p>
         <lu class="table_theme_dark table">
-        <li class="table_cell_theme_dark table_cell">
+          <li class="table_cell_theme_dark table_cell">
           <p class="table_heading_theme_dark table_heading">1</p>
         <p class="table_text_theme_dark table_text">Выберите привлекательный проект.</p>
         </li>
@@ -128,24 +133,32 @@
     <footer class="footer">
       <div class="footer_columns">
           <div class="footer_column_content_copyright footer_column">
-          <div class="logo_place_footer logo"></div>
-          <p class="footer_author"> &COPY; 2020. Екатерина Иванова</p>
+            <div class="logo_place_footer logo"></div>
+            <p class="footer_author"> &COPY; 2020. Екатерина Иванова</p>
           </div>
             <nav class="footer_column_content_info footer_column">
             <ul class="footer_column-heading">О Практикуме
-            <li><a href="#" class="footer_column-links">Главная</a></li>
-            <li><a href="#" class="footer_column-links">Концепция</a></li>
-            <li><a href="#" class="footer_column-links">Наставники</a></li>
+              <li><a href="#" class="footer_column-links">Главная</a></li>
+              <li><a href="#" class="footer_column-links">Концепция</a></li>
+              <li><a href="#" class="footer_column-links">Наставники</a></li>
             </ul>
             </nav>
               <nav class="footer_column_content_social footer_column">
               <ul class="footer_column-heading">Соцсети
-              <li><a href="#" class="footer_column-links"><img class="footer_social-icon" src="./images/facebook_color_white.svg" alt="иконка Фейсбука">Facebook</a></li>
-              <li><a href="#" class="footer_column-links"><img class="footer_social-icon" src="./images/vk_color_white.svg" alt="иконка вконтакте">ВКонтакте</a></li>
-              <li><a href="#" class="footer_column-links"><img class="footer_social-icon" src="./images/instagram_color_white.svg" alt="иконка инстаграм">Instagram</a></li>
+                <li>
+                  <a href="#" class="footer_column-links">
+                  <img class="footer_social-icon" src="./images/facebook_color_white.svg" alt="иконка Фейсбука">Facebook</a>
+                </li>
+                <li>
+                  <a href="#" class="footer_column-links">
+                  <img class="footer_social-icon" src="./images/vk_color_white.svg" alt="иконка вконтакте">ВКонтакте</a>
+                </li>
+                <li>
+                  <a href="#" class="footer_column-links">
+                  <img class="footer_social-icon" src="./images/instagram_color_white.svg" alt="иконка инстаграм">Instagram</a>
+                </li>
               </ul>
               </nav>
-            
       </div>
     </footer>
   </section>
