--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <p class="feynman__subtitle">Выучить и не забыть.</p>
                 <a href="#" class="feynman__link">Подробнее &rarr;</a>
             </section>
-            <!-- тут руководствовалась той же логикой: Родитель__элемент_моификатор/ элемент_модификатор. Это вроде как я поняла по БЭМ. Хотя в ревью написано, что тут с классами ок.-->
+            <!-- тут руководствовалась той же логикой: Родитель__элемент_моификатор/ родитель__элемент / элемент_модификатор. Это вроде как я поняла по БЭМ. Хотя в ревью написано, что тут с классами ок.-->
             <section class="kaufman">
                 <div class="kaufman__triangle"></div>
                 <h4 class="section-title_theme_dark section-title">Принципы обучения</h4>
@@ -138,7 +138,7 @@
                     <div class="logo__place_footer logo"></div>
                     <p class="footer__author"> &COPY; 2020. Екатерина Иванова</p>
                 </div>
-                <nav class="footer__column_content_info footer_column">
+                <nav class="footer__column_content_info footer__column">
                     <ul class="footer__column-heading">
                         <li class="footer__column_card">О Практикуме</li>
                         <li class="footer__column_card">
@@ -152,7 +152,7 @@
                         </li>
                     </ul>
                 </nav>
-                <nav class="footer__column_content_social footer_column ">
+                <nav class="footer__column_content_social footer__column ">
                     <ul class="footer__column-heading ">
                         <li class="footer__column_card">Соцсети</li>
                         <li class="footer__column_card">
