--- a/sprint2/index.html
+++ b/sprint2/index.html
@@ -20,7 +20,7 @@
             <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
                 <a href="#" class="header__link"> Узнать &rarr;</a></p>
             <div class="header__main-illustration"></div>
-            <div class="header__square-pic"></div>
+            <div class="header__square-pic header__square-pic_rotation"></div>
         </header>
         <main class="content">
             <section class="description">
@@ -33,6 +33,48 @@
                         <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
                     </div>
                 </div>
+            </section>
+            <section class="techniques">
+                <h2 class="section-title">Техники обучения</h2>
+                <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+                <ul class="cards">
+                    <li class="cards__item">
+                        <img class="cards__image" src="./images/cards-attention.png" alt="книга в руках">
+                        <h3 class="cards__title">Два вида внимания</h3>
+                        <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+                    </li>
+                    <li class="cards__item">
+                        <img class="cards__image" src="./images/cards-recall.png" alt="скульптура задумчивого юноши">
+                        <h3 class="cards__title">Recall</h3>
+                        <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+                    </li>
+                    <li class="cards__item">
+                        <img class="cards__image" src="./images/cards-interliving.png" alt="холл сиднейской оперы">
+                        <h3 class="cards__title">Интерливинг</h3>
+                        <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+                    </li>
+                    <li class="cards__item">
+                        <img class="cards__image" src="./images/cards-question.png" alt="одинокий человек в комнате">
+                        <h3 class="cards__title">Вопросы</h3>
+                        <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+                    </li>
+                    <li class="cards__item">
+                        <img class="cards__image" src="./images/cards-competence.png" alt="стопка книг на руке">
+                        <h3 class="cards__title">Иллюзия компетентности</h3>
+                        <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="video">
+
+            </section>
+            <section class="oakley">
+
+            </section>
+            <section class="feynman">
+                <h2 class="feynman__title">Метод Фейнмана</h2>
+                <p class="feynman__subtitle">Выучить и не забыть.</p>
+                <a href="#" class="feynman__link">Подробнее &rarr;</a>
             </section>
 
             <section class="digits">
@@ -75,12 +117,10 @@
                     </li>
                 </ul>
             </section>
+            <section class="khan">
 
-            <section class="feynman">
-                <h2 class="feynman__title">Метод Фейнмана</h2>
-                <p class="feynman__subtitle">Выучить и не забыть.</p>
-                <a href="#" class="feynman__link">Подробнее &rarr;</a>
             </section>
+            
             <section class="kaufman">
                 <div class="kaufman__triangle"></div>
                 <h3 class="section-title_theme_dark section-title">Принципы обучения</h3>
@@ -128,6 +168,9 @@
                         <p class="table__text_theme_dark table__text">Уделяйте внимание количеству и скорости.</p>
                     </li>
                 </ul>
+            </section>
+            <section class="resources">
+
             </section>
         </main>
         <footer class="footer">
