--- a/sprint2/index.html
+++ b/sprint2/index.html
@@ -20,7 +20,7 @@
             <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
                 <a href="#" class="header__link"> Узнать &rarr;</a></p>
             <div class="header__main-illustration"></div>
-            <div class="header__square-pic header__square-pic_rotation"></div>
+            <div class="header__square-pic rotation"></div>
         </header>
         <main class="content">
             <section class="description">
@@ -148,7 +148,7 @@
             </section>
             
             <section class="kaufman">
-                <div class="kaufman__triangle"></div>
+                <div class="kaufman__triangle rotation"></div>
                 <h3 class="section-title_theme_dark section-title">Принципы обучения</h3>
                 <p class="section-subtitle_theme_dark section-subtitle">от Джоша Кауфмана</p>
                 <ul class="table_theme_dark table">
@@ -196,7 +196,14 @@
                 </ul>
             </section>
             <section class="resources">
-
+                <h2 class="section-title">Полезные ресурсы</h2>
+                <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+                <div class="resources__logo-zone">
+                    <img class="resources__logo" src="./images/resources-arzamas.svg" alt="логотип Арзамас">
+                    <img class="resources__logo" src="./images/resources-n1.svg" alt="логотип N+1">
+                    <img class="resources__logo" src="./images/resources-strelka.svg" alt="логотип Strelka">
+                    <img class="resources__logo" src="./images/resources-polka.svg" alt="логотип Полка">
+                </div>
             </section>
         </main>
         <footer class="footer">
