--- a/sprint2/index.html
+++ b/sprint2/index.html
@@ -18,7 +18,7 @@
             <div class="logo logo_place_header"></div>
             <h1 class="header__title">Научиться учиться</h1>
             <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-                <a href="#" class="header__link"> Узнать &rarr;</a></p>
+                <a href="#" class="header__link link"> Узнать &rarr;</a></p>
             <div class="header__main-illustration"></div>
             <div class="header__square-pic rotation"></div>
         </header>
@@ -89,7 +89,7 @@
             <section class="feynman">
                 <h2 class="feynman__title">Метод Фейнмана</h2>
                 <p class="feynman__subtitle">Выучить и не забыть.</p>
-                <a href="#" class="feynman__link">Подробнее &rarr;</a>
+                <a href="#" class="feynman__link link">Подробнее &rarr;</a>
             </section>
 
             <section class="digits">
@@ -141,7 +141,7 @@
                     <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
                     <div class="khan__book-container">
                         <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги">
-                        <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
+                        <a class="khan__buy-link link" href="#">Купить книгу &rarr;</a>
                     </div>
                 </div>
 
@@ -219,13 +219,13 @@
                     <!-- класс footer__card первое, что пришло в голову. Рассматривала эти блоки как некие карточки с ссылками.-->
                     <ul class="footer__column-links">
                         <li>
-                            <a href=" # " class="footer__column-link ">Главная</a>
+                            <a href=" # " class="footer__column-link link">Главная</a>
                         </li>
                         <li>
-                            <a href="# " class="footer__column-link ">Концепция</a>
+                            <a href="# " class="footer__column-link link">Концепция</a>
                         </li>
                         <li>
-                            <a href="# " class="footer__column-link ">Наставники</a>
+                            <a href="# " class="footer__column-link link">Наставники</a>
                         </li>
                     </ul>
                 </nav>
@@ -233,15 +233,15 @@
                     <h2 class="footer__column-heading">Соцсети</h2>
                     <ul class="footer__column-links">
                         <li>
-                            <a href="# " class="footer__column-link ">
+                            <a href="# " class="footer__column-link link">
                                 <img class="footer__social-icon " src="./images/facebook_color_white.svg" alt="иконка Фейсбука ">Facebook</a>
                         </li>
                         <li>
-                            <a href="# " class="footer__column-link ">
+                            <a href="# " class="footer__column-link link">
                                 <img class="footer__social-icon " src="./images/vk_color_white.svg" alt="иконка вконтакте ">ВКонтакте</a>
                         </li>
                         <li>
-                            <a href="# " class="footer__column-link ">
+                            <a href="# " class="footer__column-link link">
                                 <img class="footer__social-icon " src="./images/instagram_color_white.svg" alt="иконка инстаграм ">Instagram</a>
                         </li>
                     </ul>
