--- a/russian-travel/index.html
+++ b/russian-travel/index.html
@@ -47,15 +47,15 @@
         </header>
         <main class="content">
             <section class="lead">
-                <h1 class="lead__title title">Путешествия по России</h1>
-                <p class="lead__subtitle subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <h1 class="lead__title">Путешествия по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
 
                 <img class="lead__image" src="images/lead-polka.jpg">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
             <section class="intro">
-                <h2 class="intro__title title">Чего мы там не видели?</h2>
-                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
+                <h2 class="intro__title">Чего мы там не видели?</h2>
+                <p class="intro__text subtitle">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
                     планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия
                     — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А
                     ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
@@ -71,18 +71,18 @@
                 </p>
             </section>
             <section class="photo-grid">
-                <img class="photo-grid__item1" src="./images/photo-grid-train.jpg">
-                <img class="photo-grid__item2" src="./images/photo-grid-atharva-tulsi.jpg">
-                <img class="photo-grid__item3" src="./images/photo-grid-tuman.jpg">
-                <img class="photo-grid__item4" src="./images/photo-grid-sochi.jpg">
-                <img class="photo-grid__item5" src="./images/photo-grid-arisa.jpg">
-                <img class="photo-grid__item6" src="./images/photo-grid-baikal.jpg">
-                <img class="photo-grid__item7" src="./images/photo-grid-elbrus.jpg">
-                <img class="photo-grid__item8" src="./images/photo-grid-kondratiev.jpg">
-                <img class="photo-grid__item9" src="./images/photo-grid-kamchatka-1.jpg">
-                <img class="photo-grid__item10" src="./images/photo-grid-kamchatka-2.jpg">
-                <img class="photo-grid__item11" src="./images/photo-grid-baikal-2.jpg">
-                <img class="photo-grid__item12" src="./images/photo-grid-ergaki.jpg">
+                <img class="photo-grid__item_1 photo-grid__item" src="./images/photo-grid-train.jpg">
+                <img class="photo-grid__item_2 photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg">
+                <img class="photo-grid__item_3 photo-grid__item" src="./images/photo-grid-tuman.jpg">
+                <img class="photo-grid__item_4 photo-grid__item" src="./images/photo-grid-sochi.jpg">
+                <img class="photo-grid__item_5 photo-grid__item" src="./images/photo-grid-arisa.jpg">
+                <img class="photo-grid__item_6 photo-grid__item" src="./images/photo-grid-baikal.jpg">
+                <img class="photo-grid__item_7 photo-grid__item" src="./images/photo-grid-elbrus.jpg">
+                <img class="photo-grid__item_8 photo-grid__item" src="./images/photo-grid-kondratiev.jpg">
+                <img class="photo-grid__item_9 photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg">
+                <img class="photo-grid__item_10 photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg">
+                <img class="photo-grid__item_11 photo-grid__item" src="./images/photo-grid-baikal-2.jpg">
+                <img class="photo-grid__item_12 photo-grid__item" src="./images/photo-grid-ergaki.jpg">
 
             </section>
             <section class="places">
@@ -90,7 +90,7 @@
                     <h2 class="place__title title">Куршская коса</h2>
                     <p class="place__url-heading">URL</p>
                     <a class="place__website" href="park-kosa.ru">park-kosa.ru</a>
-                    <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+                    <p class="place__paragraph subtitle">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                         горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
                         моря с другой. Уникальная природная зона на краю российского анклава.
                         <br>
@@ -107,7 +107,7 @@
                     <a class="place__website" href="
                     https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
 
-                    <p class="place__paragraph">
+                    <p class="place__paragraph subtitle">
                         Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                         которой на юг —
                         тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.<br>
@@ -125,7 +125,7 @@
                     <p class="place__url-heading">URL</p>
                     <a class="place__website" href="
                     https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
-                <p class="place__paragraph">Алтай — одно из красивейших мест в России.
+                <p class="place__paragraph subtitle">Алтай — одно из красивейших мест в России.
                     В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                     горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
                     чудом здешних мест — горным воздухом.<br>
@@ -141,7 +141,7 @@
         <p class="place__url-heading">URL</p>
         <a class="place__website" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
 
-        <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
+        <p class="place__paragraph subtitle">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
             мест в России.<br>
             <br>
@@ -157,7 +157,7 @@
         <p class="place__url-heading">URL</p>
         <a class="place__website" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
 
-        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+        <p class="place__paragraph subtitle">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
             сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров —
             леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым
             соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
