--- a/russian-travel/index.html
+++ b/russian-travel/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="images/__logo.svg" alt="Российская федерация">
+            <img class="header__logo" src="images/__logo.svg" alt="Российская Федерация">
 
 
             <a class="header__lang-link header__lang-link_selected" href="# ">Ru</a>
