--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="images/__logo.svg" alt="Российская Федерация">
+            <img class="header__logo" src="./images/__logo.svg" alt="Российская Федерация">
 
             <ul class="header__lang-container">
                 <li>
